--- a/index.html
+++ b/index.html
@@ -1,25 +1,38 @@
 <html>
 <head>
-  <meta charset="UTF-8">
+  <link rel="stylesheet" href="normalize.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Check Yo'Self</title>
 </head>
   <body>
     <header>
-      <h1>CHECK YO' SELF</h1>
-      <input type="text" placeholder="Search">
+      <h1>CHECK<span>YO'</span>SELF</h1>
+      <div class="search">
+        <img src="images/search.svg" alt="magnifying glass">
+        <input id="search-input" type="text" placeholder="Search">
+      </div>  
     </header>
     <aside>
-      <label for="">Task Title</label>
-      <input type="text">
-      <label for="">Task Item</label>
-      <input type="text">
-      <button>Make Task List</button>
-      <button>Clear All</button>
-      <button>Filter by Urgency</button>
+      <label class="input-labels" for="title-input">Task Title</label>
+      <input id="title-input" type="text">
+      <label class="input-labels" for="task-input">Task Item</label>
+      <input id="task-input" type="text">
+      <button id="add-task-btn">+</button>
+      <button id="make-list-btn" class="btns">Make Task List</button>
+      <button id="clear-btn" class="btns">Clear All</button>
+      <button id="filter-btn" class="btns">Filter by Urgency</button>
     </aside>
     <main>
       <section>
-        
+        <h2 id="title-output">Task Title</h2>
+        <img src="images/checkbox.svg" alt="">
+        <img src="images/checkbox-active.svg" alt="">
+        <img src="images/urgent.svg" alt="">
+        <img src="images/delete.svg" alt="">
+        <p>URGENT</p>
+        <p>DELETE</p>
       </section>
     </main>
   </body>
