Save tasks as objects and to local storage, need to add tasks to an array

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <article id="card-prompt">
           <p class="prompt-text">Begin by adding tasks in the fields to the right!</p>
         </article>
-        <article id="card">
+<!--         <article id="card">
           <header class="card-header">
             <h2 id="title-output">Task Title</h2>
           </header>
@@ -55,7 +55,7 @@
               <p>DELETE</p>
             </div>
           </footer>
-        </article>
+        </article> -->
       </section>
     </main>  
   </body>
