Make adjustments to font sizes and disable button colors

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <input id="task-input" type="text">
             <button disabled id="add-task-btn">+</button>
           </div>
-          <button id="make-list-btn" class="btns">Make Task List</button>
+          <button disabled id="make-list-btn" class="btns">Make Task List</button>
           <button disabled id="clear-btn" class="btns">Clear All</button>
         </section>
         <section class="filter-by-urgency">
@@ -36,26 +36,6 @@
         <article id="card-prompt">
           <p class="prompt-text">Begin by adding tasks in the fields to the right!</p>
         </article>
-<!--         <article id="card">
-          <header class="card-header">
-            <h2 id="title-output">Task Title</h2>
-          </header>
-          <main class="task-output"> 
-            <img src="images/checkbox.svg" alt="">
-            <img src="images/checkbox-active.svg" alt="">
-          </main> 
-          </header>
-          <footer>
-            <div class="footer-item">
-              <img id="urgent" src="images/urgent.svg" alt="">
-              <p>URGENT</p>
-            </div>
-            <div class="footer-item">
-              <img id="delete" src="images/delete.svg" alt="">
-              <p>DELETE</p>
-            </div>
-          </footer>
-        </article> -->
       </section>
     </main>  
   </body>
