Add plus img and style

--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
           <label class="input-labels" for="task-input">Task Item</label>
           <div class="task">
             <input id="task-input" type="text">
-            <button disabled id="add-task-btn">+</button>
+            <img disabled id="add-task-btn" src="images/plus.svg" alt="plus sign">
+            <!-- <button disabled id="add-task-btn">+</button> -->
           </div>
-          <button disabled id="make-list-btn" class="btns">Make Task List</button>
+          <button id="make-list-btn" class="btns">Make Task List</button>
           <button disabled id="clear-btn" class="btns">Clear All</button>
         </section>
         <section class="filter-by-urgency">
