Append card and task items, save to local storage

--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@
         <section class="create-tasks">
           <label class="input-labels" for="title-input">Task Title</label>
           <input id="title-input" type="text">
-          <div id="added-task-item"></div>
+          <ul id="added-task-item"></ul>
           <label class="input-labels" for="task-input">Task Item</label>
           <div class="task">
             <input id="task-input" type="text">
-            <img disabled id="add-task-btn" src="images/plus.svg" alt="plus sign">
-            <!-- <button disabled id="add-task-btn">+</button> -->
+            <button disabled id="add-task-btn"><img id="plus-img" src="images/plus.svg" alt="plus sign"></button>
           </div>
           <button id="make-list-btn" class="btns">Make Task List</button>
           <button disabled id="clear-btn" class="btns">Clear All</button>
