Fix disabled feature for add task list btn

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <input id="task-input" type="text">
             <button disabled id="add-task-btn"><img id="plus-img" src="images/plus.svg" alt="plus sign"></button>
           </div>
-          <button id="make-list-btn" class="btns">Make Task List</button>
+          <button disabled id="make-list-btn" class="btns">Make Task List</button>
           <button disabled id="clear-btn" class="btns">Clear All</button>
         </section>
         <section class="filter-by-urgency">
