Add media queries and refactor more code

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </aside>
       <section id="card-area">
         <article id="card-prompt">
-          <p class="prompt-text">Start adding ToDo Lists by adding a title and task to complete in the fields to the right!</p>
+          <p class="prompt-text">Start creating ToDo Lists by adding a title and tasks to complete!</p>
         </article>
       </section>
     </main>  
